--- a/style.css
+++ b/style.css
@@ -274,10 +274,10 @@ body {
 
 /* about section */
 .about,
-.menu,
-.contact {
+.menu {
   padding: 8rem 7% 1.4rem;
 }
+/* disini kalo mau yg biasa aja tambahkan contact */
 
 .about h2,
 .menu h2,
