--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 :root {
   --primary: #b6895b;
-  --bg: #514438;
+  --bg: #382b0e;
 }
-html {
-  scroll-behavior: smooth;
-}
+
 * {
   margin: 0;
   padding: 0;
@@ -14,10 +12,14 @@ html {
   text-decoration: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
+  font-family: 'Poppins', sans-serif;
   background-color: var(--bg);
   color: #fff;
-  font-family: "Poppins", sans-serif;
 }
 
 /* Navbar */
@@ -58,7 +60,7 @@ body {
 }
 
 .navbar .navbar-nav a::after {
-  content: "";
+  content: '';
   display: block;
   padding-bottom: 0.5rem;
   border-bottom: 0.1rem solid var(--primary);
@@ -83,79 +85,22 @@ body {
   display: none;
 }
 
-/* Navbar search form */
-.navbar .search-form {
-  position: absolute;
-  top: 100%;
-  right: 7%;
-  background-color: #fff;
-  width: 50rem;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: 0.3s;
-}
-
-.navbar .search-form.active {
-  transform: scaleY(1);
-}
-
-.navbar .search-form input {
-  height: 100%;
-  width: 100%;
-  font-size: 1.6rem;
-  color: var(--bg);
-  padding: 1rem;
-}
-
-.navbar .search-form label {
-  cursor: pointer;
-  font-size: 2rem;
-  margin-right: 1.5rem;
-  color: var(--bg);
-}
-
-#hamburger-menu {
-  display: none;
-}
-
-/* Navbar search form */
-.navbar .search-form {
-  position: absolute;
-  top: 100%;
-  right: 7%;
-  background-color: #fff;
-  width: 50rem;
-  height: 5rem;
-  display: flex;
-  align-items: center;
-  transform: scaleY(0);
-  transform-origin: top;
-  transition: 0.3s;
-}
-
-.navbar .search-form.active {
-  transform: scaleY(1);
-}
-
-.navbar .search-form input {
-  height: 100%;
-  width: 100%;
-  font-size: 1.6rem;
-  color: var(--bg);
-  padding: 1rem;
-}
-
-.navbar .search-form label {
-  cursor: pointer;
-  font-size: 2rem;
-  margin-right: 1.5rem;
-  color: var(--bg);
-}
-
 /* Shopping Cart */
+#shopping-cart-button {
+  position: relative;
+}
+
+#shopping-cart-button .quantity-badge {
+  display: inline-block;
+  padding: 1px 5px;
+  background-color: red;
+  border-radius: 6px;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 0;
+  right: -10px;
+}
+
 .shopping-cart {
   position: absolute;
   top: 100%;
@@ -183,58 +128,71 @@ body {
 }
 
 .shopping-cart img {
-  height: 6rem;
+  height: 4rem;
   border-radius: 50%;
 }
 
 .shopping-cart h3 {
-  font-size: 1.6rem;
-  padding-bottom: 0.5rem;
+  font-size: 1.4rem;
 }
 
 .shopping-cart .item-price {
   font-size: 1.2rem;
 }
 
-.shopping-cart .remove-item {
-  position: absolute;
-  right: 1rem;
+.shopping-cart .cart-item #add,
+.shopping-cart .cart-item #remove {
+  display: inline-block;
+  padding: 2px 5px;
   cursor: pointer;
+  margin: 0 8px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  font-size: 1.1rem;
 }
 
-.shopping-cart .remove-item:hover {
-  color: var(--primary);
-}
-
-/* hero section */
+/* Hero Section */
 .hero {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url(img/coffee.jpg);
+  background-image: url('img/header-bg.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
   position: relative;
+  -webkit-mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
 }
 
-.hero::after {
-  content: "";
+/* .hero::after {
+  content: '';
   display: block;
   position: absolute;
   width: 100%;
-  height: 20%;
+  height: 30%;
   bottom: 0;
-  background: linear-gradient(
-    0deg,
-    rgb(81, 68, 56) 5%,
-    rgba(255, 255, 255, 0.021) 35%
-  );
+  background: linear-gradient(0deg, rgba(1, 1, 3, 1) 8%, rgba(255, 255, 255, 0) 50%);
+} */
+
+.hero .mask-container {
+  position: absolute;
+  /* background: salmon; */
+  inset: 0;
+  -webkit-mask-image: url('img/header-bg.svg');
+  -webkit-mask-repeat: no-repeat;
+  -webkit-mask-size: auto;
+  -webkit-mask-position: center;
 }
 
 .hero .content {
   padding: 1.4rem 7%;
-  max-width: 60rem;
+  /* max-width: 60rem; */
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 130px;
 }
 
 .hero .content h1 {
@@ -242,21 +200,6 @@ body {
   color: #fff;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   line-height: 1.2;
-}
-
-.hero .content .cta {
-  margin-top: 1rem;
-  color: var(--bg);
-  display: inline-block;
-  padding: 1rem 3rem;
-  font-size: 1.4rem;
-  background-color: var(--primary);
-  border-radius: 0.5rem;
-  box-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
-}
-.hero .content .cta:hover {
-  color: #fff;
-  box-shadow: 1px 1px 3px rgba(255, 255, 255, 0.5);
 }
 
 .hero .content h1 span {
@@ -267,9 +210,29 @@ body {
   font-size: 1.6rem;
   margin-top: 1rem;
   line-height: 1.4;
-  font-weight: 200;
+  font-weight: 500;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   mix-blend-mode: difference;
+  color: var(--primary);
+}
+
+.hero .content .cta {
+  margin-top: 1rem;
+  display: inline-block;
+  padding: 1rem 3rem;
+  font-size: 1.4rem;
+  color: #fff;
+  background-color: var(--primary);
+  border-radius: 0.5rem;
+  box-shadow: 1px 1px 3px rgba(82, 57, 21, 0.808);
+}
+.hero .content .cta:hover {
+  color: #fff;
+  box-shadow: 1px 1px 3px rgba(82, 57, 21, 0.808);
+}
+
+.hero .content h1 span {
+  color: var(--primary);
 }
 
 /* about section */
