--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
   --primary: #b6895b;
   --bg: #382b0e;
+  --p: #5f5f5f;
 }
 
 * {
@@ -156,7 +157,7 @@ body {
 
 .login-container {
   position: relative;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(110, 83, 43, 0.904);
   color: #010101;
   margin: auto;
   padding: 1.2rem;
@@ -193,7 +194,7 @@ body {
   display: block;
   height: 50px;
   width: 100%;
-  background-color: #fff;
+  background-color: #333;
   border-radius: 3px;
   padding: 0 0.8rem;
   margin-top: 0.8rem;
@@ -205,7 +206,7 @@ body {
   margin-top: 2rem;
   width: 100%;
   color: #000000;
-  background-color: #ffffff;
+  background-color: #333;
   padding: 1.2rem 0;
   font-size: 18px;
   font-weight: 600;
@@ -280,7 +281,7 @@ body {
   font-weight: 500;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   mix-blend-mode: difference;
-  color: var(--primary);
+  color: var(--p);
 }
 
 .hero .content .cta {
@@ -482,7 +483,7 @@ footer .links a {
 }
 
 footer .credit a {
-  color: var(--bg);
+  color: var(--p);
   font-weight: 700;
 }
 
