--- a/style.css
+++ b/style.css
@@ -405,9 +405,9 @@ body {
 /* contact us section */
 .contact .row {
   display: flex;
-  margin-top: 2rem;
   background-color: #222;
   border-radius: 7px;
+  margin: 2rem;
 }
 
 .contact .row .map {
