--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ body {
   width: 100%;
   text-align: center;
   position: fixed;
-  top: 130px;
+  top: 180px;
 }
 
 .hero .content h1 {
@@ -286,7 +286,7 @@ body {
 
 .hero .content .cta {
   margin-top: 1rem;
-
+  transition: 0.3s;
   color: var(--primary);
   display: inline-block;
   padding: 1rem 3rem;
@@ -333,6 +333,7 @@ body {
 
 .about .row {
   display: flex;
+  column-gap: 2rem;
 }
 
 .about .row .about-img {
@@ -347,6 +348,8 @@ body {
 .about .row .content {
   flex: 1 1 35rem;
   padding: 0 1rem;
+  margin: auto;
+  text-align: center;
 }
 
 .about .row .content h3 {
@@ -354,9 +357,13 @@ body {
   margin-bottom: 1rem;
 }
 
+.about .row .content h3 > span {
+  color: var(--primary);
+}
+
 .about .row .content p {
   margin-bottom: 0.8rem;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-weight: 100;
   line-height: 1.6;
 }
@@ -402,7 +409,36 @@ body {
   margin: 0.8rem auto 0.5rem;
 }
 
+.menu .add {
+  display: flex;
+  justify-content: center;
+  margin-top: 0.6rem;
+}
+
+.menu .add a {
+  height: 3rem;
+  width: 3rem;
+  color: #fff;
+  border: 1px solid white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.menu .add a:hover {
+  background-color: var(--primary);
+}
+
+.feather-16 {
+  width: 16px;
+  height: 16px;
+}
+
 /* contact us section */
+.contact {
+  padding: 0 7%;
+}
 .contact .row {
   display: flex;
   background-color: #222;
@@ -449,6 +485,12 @@ body {
   background-color: var(--primary);
   cursor: pointer;
   border-radius: 7px;
+  transition: 0.3s;
+}
+
+.contact .row form .btn:hover {
+  background-color: #fff;
+  color: var(--primary);
 }
 
 /* footer */
@@ -594,5 +636,10 @@ footer .credit a {
   .login-container {
     width: 70%;
     height: auto;
+  }
+
+  .menu .add a {
+    height: 3.5rem;
+    width: 3.5rem;
   }
 }
