--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ body {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-image: url("img/header-bg.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 1), rgba(0, 0, 0, 0.5)), url("img/header-bg.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -283,7 +283,7 @@ body {
   font-weight: 500;
   text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
   mix-blend-mode: difference;
-  color: var(--p);
+  color: var(--primary);
 }
 
 .hero .content .cta {
